Add bootstrap css

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes"> <!-- Fullscreen when on Home Screen -->
 	<meta name="format-detection" content="telephone=no"> <!-- So phones don't think school id numbers are telephone numbers -->
 	<meta name="apple-mobile-web-app-title" content="Troy Social Credit">
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css"/>
     <title>Troy Social Credit</title>
 </head>
 <body>
