remove private reference

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes"> <!-- Fullscreen when on Home Screen -->
-	<meta name="format-detection" content="telephone=no"> <!-- So phones don't think school id numbers are telephone numbers -->
-	<meta name="apple-mobile-web-app-title" content="Troy Social Credit">
+	<meta name="format-detection" content="telephone=no"> <!-- So phones don't think IDs are telephone numbers -->
+	<meta name="apple-mobile-web-app-title" content="Social Credit">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css"/>
-    <title>Troy Social Credit</title>
+    <title>Social Credit</title>
 </head>
 <body>
     
